Bug 1213007: Part 1. Implementing gfxCrash. Aurora patch. r=dvander a=lizzard

--HG--
extra : commitid : GEB0S39e8wk